[package]
name = "lock_prowler"
version = "0.1.0"
edition = "2021"
description = "Digital Forensics and Incident Response (DFIR) toolkit with AES memory decryption"
license = "MIT OR Apache-2.0"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["forensics", "dfir", "security", "memory-analysis"]
categories = ["cryptography", "development-tools"]
rust-version = "1.70"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
ccm = "0.5"
hex = "0.4"
anyhow = "1.0"
bitflags = "2.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
walkdir = "2.3"
regex = "1.10"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

wolf_net = { path = "../../../wolf_net" }
wolf_db = { path = "../../WolfDb" }
tracing = "0.1"
dialoguer = "0.11"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"
tempfile = "3.8"
