[package]
name = "airgap"
version = "0.1.0"
edition = "2021"
authors = ["TersecPot Contributors"]
description = "Quantum-Proof Air Gap Bridge for Defense Applications"
license = "MIT"
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["security", "airgap", "bridge"]
categories = ["cryptography"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
fips204 = "0.4"
tempfile = "3.0"
hex = "0.4"
thiserror = "1.0"
chrono = "0.4"
tracing = "0.1"

[lints]
workspace = true
