[package]
name = "ceremony"
version = "0.1.0"
edition = "2021"
description = "A reference implementation of the Blind Command-Bus Sentinel architecture using Post-Quantum Cryptography"
authors = ["TersecPot Developers"]
license = "MIT"
repository = "https://github.com/tersecpot/tersecpot"
readme = "README.md"
keywords = ["security", "ceremony", "setup"]
categories = ["cryptography"]

[dependencies]
fips204 = "0.4.6"
fips203 = "0.4.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
dialoguer = "0.11"
zeroize = "1.7"
tempfile = "3.8"
tracing = "0.1"
shared = { path = "../shared" }

[lints]
workspace = true
